--- a/emails/elnaz/auto-responder/Ryan/download-doc-desk.html
+++ b/emails/elnaz/auto-responder/Ryan/download-doc-desk.html
@@ -59,11 +59,25 @@
                         <td class="three sub-columns"></td>
                         <td class="nine sub-columns">
                           <table class="button button-blue button-width-auto mt-0 mb-0">
+                            <!--[if gte mso 9]>
+                            <tr>
+                              <td>
+                                <span>&nbsp;</span>
+                              </td>
+                            </tr>
+                            <![endif]-->
                             <tr>
                               <td>
                                 <a href="#">Download White Paper</a>
                               </td>
                             </tr>
+                            <!--[if gte mso 9]>
+                            <tr>
+                              <td>
+                                <span>&nbsp;</span>
+                              </td>
+                            </tr>
+                            <![endif]-->
                           </table>
                         </td>
                         <td class="expander"></td>
