--- a/emails/elnaz/auto-responder/in-person-event.htm
+++ b/emails/elnaz/auto-responder/in-person-event.htm
@@ -91,7 +91,17 @@
                             <table class="button button-green button-width-auto mt-10 mb-0">
                               <tr>
                                 <td>
+                                  <span>&nbsp;</span>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td>
                                   <a href="#">Add to Your Calendar</a>
+                                </td>
+                              </tr>
+                              <tr>
+                                <td>
+                                  <span>&nbsp;</span>
                                 </td>
                               </tr>
                             </table>
