updated Ryan emails with fix for mobile image center issue

--- a/emails/elnaz/auto-responder/Ryan/download-trial-screen-desk.html
+++ b/emails/elnaz/auto-responder/Ryan/download-trial-screen-desk.html
@@ -97,7 +97,7 @@
                         <td class="nine sub-columns">
                           <a href="#">
                             <img alt="text" src="http://email-ryan.codingbyhand.com/images/data-wired.jpg"
-                                 class="img-responsive img-border"> </a>
+                                 class="img-responsive"> </a>
                         </td>
                         <td class="three sub-columns"></td>
                         <td class="expander"></td>
@@ -156,7 +156,7 @@
                             <center>
                               <a href="#">
                                 <img alt="text" src="http://email-ryan.codingbyhand.com/images/data-wired.jpg"
-                                     class="img-responsive img-border">
+                                     class="center-block">
                               </a>
                             </center>
                           </td>
