--- a/emails/elnaz/auto-responder/Ryan/next step - no columns.html
+++ b/emails/elnaz/auto-responder/Ryan/next step - no columns.html
@@ -153,7 +153,7 @@
                                                             <a href="#">
                                                                 <img alt="text"
                                                                      src="http://software.dell.com/documents/images/10_Reasons_You_Absolutely_Need_a_Reporting_Solution_for_Active_Directory_to_Pass_Audits.jpg"
-                                                                     class="img-responsive img-border">
+                                                                     class="center-block img-border">
                                                             </a>
                                                         </center>
                                                     </td>
